Fixing diamond align

--- a/components/UserTokensComponent/UserTokenElement/UserTokenElement.module.scss
+++ b/components/UserTokensComponent/UserTokenElement/UserTokenElement.module.scss
@@ -45,12 +45,8 @@
     @apply text-xs sm:text-base;
     @apply text-slate-400;
 
-    svg {
-      @apply -translate-y-px;
-
-      & path {
-        @apply stroke-sky-500;
-      }
+    svg path {
+      @apply stroke-sky-500;
     }
   }
 }
